# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
gendiff/: __init__.py  comparator.py  gendiff.py  parsers.py  reader_ext_source.py
gendiff/formats/: __init__.py  formatter.py  json.py  plain.py  plain_flat.py  simple.py  stylish.py
gendiff/scripts/: __init__.py  engine.py  gendiff.py  gendiff_run.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: after.json  expected.json  load.json
tests/: __init__.py  test_formats.py  test_gendiff.py  test_parsers.py  test_source.py
tests/fixtures/: first_file.json  first_file.yml  json_result  plain_result  second_file.json  second_file.yml  stylish_result
tests/fixtures/data/: after.json
tests/fixtures/expected/: complex_result.txt  json_result  plain_result
