[tool.poetry]
name = "demetriusstorm-gendiff"
version = "0.5.1"
description = "Compare two files. Supports json, plane and simple text."
authors = ["Dmitriy Bulygin <demetrius.storm@gmail.com>"]
repository = "https://github.com/DemetriusStorm/python-project-lvl2"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Topic :: Games/Entertainment :: Puzzle Games"
]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.3"
pyyaml = "^5.3.1"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.engine:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
