[tool.poetry]
name = "demetriusstorm-hexlet-code"
version = "0.1.0"
description = "Compare two files. Supports json, plain and simple text."
authors = ["Dmitriy Bulygin <demetrius.storm@gmail.com>"]
repository = "https://github.com/DemetriusStorm/python-project-lvl2"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX"
]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"
pytest = "^5.4.3"
pyyaml = "^5.3.1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.engine:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
